packages/parser/tests/snapshots/prose_down_test__a.snap
---
source: packages/parser/tests/prose_down_test.rs
assertion_line: 12
expression: result
---
Ok(
    Document {
        blocks: [
            Paragraph(
            	ab
            ),
        ],
    },
)
