packages/parser/tests/snapshots/prose_down_test__pds_test.snap
---
source: packages/parser/tests/prose_down_test.rs
expression: ast
input_file: packages/parser/fixtures/pds/1.pds
---
Document {
    blocks: [
        Paragraph(
        	main = "test"
        ),
    ],
}
