packages/parser/tests/snapshots/prose_down_test__prose_down_test@1.pd.snap
---
source: packages/parser/tests/prose_down_test.rs
expression: ast
input_file: packages/parser/fixtures/prose-down/1.pd
---
Document(
    [
        Paragraph(
        	aa
        ),
        ThemanticBreak,
        Paragraph(
        	b
        ),
    ],
)
